<resources>
    <string name="app_name">易技能</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<<<<<<< HEAD
    <string name="password">请输入密码</string>
    <string name="phoneNumber">请输入手机号</string>
    <string name="using">注册即代表阅读并同意使用条款和隐私政策</string>
    <string name="sendPass">发送验证码</string>
    <string name="verCode">请输入验证码</string>
    <string name="register">立即注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="user">请输入账号</string>
    <string name="enter">登入</string>
    <string name="forget_direction">你可以通过绑定的手机进行重置密码</string>
    <string name="forget_commit">获取验证码</string>

=======

    <string name="enter_login">登入</string>
    <string name="password_login">请输入密码</string>
    <string name="register_login">立即注册</string>
    <string name="forgetPassword_login">忘记密码</string>
    <string name="user_login">请输入账号</string>

    <string name="phoneNumber_register">请输入手机号</string>
    <string name="using_register">注册即代表阅读并同意使用条款和隐私政策</string>
    <string name="sendPass_register">发送验证码</string>
    <string name="verCode_register">请输入验证码</string>
    <string name="password_register">请输入密码</string>
    <string name="register_register">立即注册</string>

    <string name="forgetDirection_forget">你可以通过绑定的手机进行重置密码</string>
    <string name="phoneNumber_forget">请输入手机号</string>
    <string name="verCode_forget">请输入验证码</string>
    <string name="forgetCommit_forget">获取验证码</string>
    <string name="changePassword_forget">修改密码</string>
    <string name="sendPass_forget">发送验证码</string>

    <string name="writePassword_change">请输入修改的密码：</string>
    <string name="passwordDirection_change">6_16个字符区分大小写</string>
    <string name="define_change">确定</string>
    <string name="showPassword_change">显示密码</string>

    <string name="logoContentDescription_about">易技能logo</string>
    <string name="version_about">1.0</string>
    <string name="changeVersion_about">版本更新</string>
    <string name="nowVersion_about">已是最新版本</string>
    <string name="help_about">帮助</string>
    <string name="feedback_about">反馈</string>
>>>>>>> 1758ea1cf6d354079b50e43481ff83d26cda4fbf
</resources>
