<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordPage"
    android:orientation="vertical"
    android:layout_margin="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writePassword_change"
        android:textSize="20sp"
        android:textColor="@color/colorHtml_1"/>
    <EditText
        android:id="@+id/password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/passwordDirection_change"
        android:textColorHint="@color/colorHtml_1"
        android:maxLength="16"
        android:inputType="textPassword"
        tools:ignore="Autofill"/>
    <Button
        android:id="@+id/nextStep_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/define_change"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/phonenumber"/>

    <CheckBox
        android:id="@+id/radio_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/showPassword_change"
        android:textSize="20sp"
        android:textColor="@color/colorHtml_1"
        android:checked="true"/>


</LinearLayout>