<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background">

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="number"
        android:hint="@string/user_login"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="20dp"
        android:maxLines="1"
        android:maxLength="11"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/user_login"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="20dp"
        android:maxLines="1"
        android:maxLength="16"
        tools:ignore="Autofill"
        />

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:text="@string/enter_login"
        android:textColor="#6B7177"
        android:background="#33000000" />
    <TextView
        android:id="@+id/forgetPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorHtml"
        android:text="@string/forgetPassword_login"
        android:layout_marginTop="30dp"
        android:layout_below="@id/login_login"
        android:layout_alignEnd="@id/login_login"
        />
    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorHtml"
        android:text="@string/register_login"
        android:layout_below="@id/login_login"
        android:layout_alignStart="@id/login_login"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
