<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_direction"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        style="@style/textStyle_1"
        android:layout_marginTop="200dp"/>
    <EditText
        tools:ignore="Autofill"
        android:id="@+id/editText_forget"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:background="#33000000"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/phoneNumber"
        android:drawablePadding="20dp"
        android:maxLength="11"
        />
    <Button
        android:id="@+id/button_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/phonenumber"
        android:enabled="false"
        android:text="@string/forget_commit"
        style="@style/textStyle_2"/>
</LinearLayout>